Fixed Meta Spacing

--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -13,6 +13,9 @@
       margin-top: 15px;
 }
 
+#views{
+      margin-top: 15px;
+}
 #meta{
     margin-top: 5px;
     border-top:1px solid black;
